--- a/index.html
+++ b/index.html
@@ -182,11 +182,12 @@ Stos technologii Waves może przynieść korzyści w każdym przypadku użycia, 
                         
                         
                             <div>
-        <label>Jaką kryptowalutę chcesz przeliczyć?
+        <label>Ile crypto masz na dysku z 2k13?
         <select id="krypto">
-            <option value="btc">Bitcoin</option>
+            <option value="btc">BTC</option>
             <option value="eth">Ethereum</option>
             <option value="waves">Waves</option>
+            <option value="waves">Celo</option>
         </select>
         </label>
         <br>
@@ -315,6 +316,9 @@ Stos technologii Waves może przynieść korzyści w każdym przypadku użycia, 
         przeliczenie = ile + " BTC to " + wartosc + " PLN,   ";
     } else if (krypto === "eth") {
         wartosc = 13065,6376*ile;
+        przeliczenie = ile + " ETH to " + wartosc + " PLN,   ";
+        } else if (krypto === "Celo") {
+        wartosc = 13,7656376*ile;
         przeliczenie = ile + " ETH to " + wartosc + " PLN,   ";
     } else {
         wartosc = 92,2455*ile;
