--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ Stos technologii Waves może przynieść korzyści w każdym przypadku użycia, 
             <option value="btc">BTC</option>
             <option value="eth">Ethereum</option>
             <option value="waves">Waves</option>
-            <option value="waves">Celo</option>
+            <option value="celo">Celo</option>
         </select>
         </label>
         <br>
@@ -319,7 +319,7 @@ Stos technologii Waves może przynieść korzyści w każdym przypadku użycia, 
         przeliczenie = ile + " ETH to " + wartosc + " PLN,   ";
         } else if (krypto === "Celo") {
         wartosc = 13,7656376*ile;
-        przeliczenie = ile + " ETH to " + wartosc + " PLN,   ";
+        przeliczenie = ile + " Celo to " + wartosc + " PLN,   ";
     } else {
         wartosc = 92,2455*ile;
         przeliczenie = ile + " WAVES to " + wartosc + " PLN,   ";
