--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@ Stos technologii Waves może przynieść korzyści w każdym przypadku użycia, 
         przeliczenie = ile + " ETH to " + wartosc + " PLN,   ";
         } else if (krypto === "Celo") {
         wartosc = 13.7656376*ile;
-        przeliczenie = ile + " Celo to " + wartosc + " PLN,   ";
+        przeliczenie = ile + " celo to " + wartosc + " PLN,   ";
     } else {
         wartosc = 92.2455*ile;
         przeliczenie = ile + " WAVES to " + wartosc + " PLN,   ";
