--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ Stos technologii Waves może przynieść korzyści w każdym przypadku użycia, 
             <option value="btc">BTC</option>
             <option value="eth">Ethereum</option>
             <option value="waves">Waves</option>
-            <option value="celo">Celo</option>
+            <option value="celo">celo</option>
         </select>
         </label>
         <br>
@@ -317,7 +317,7 @@ Stos technologii Waves może przynieść korzyści w każdym przypadku użycia, 
     } else if (krypto === "eth") {
         wartosc = 13065.6376*ile;
         przeliczenie = ile + " ETH to " + wartosc + " PLN,   ";
-        } else if (krypto === "Celo") {
+        } else if (krypto === "celo") {
         wartosc = 13.7656376*ile;
         przeliczenie = ile + " celo to " + wartosc + " PLN,   ";
     } else {
