--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ Stos technologii Waves może przynieść korzyści w każdym przypadku użycia, 
         </label>
         <br>
         <label>Ile?
-        <input id="ile" type="number">
+        <input id="Liczba:" type="number">
         </label>
         <br>
         <button id="button" type="button">Przelicz na PLN!</button>
